Also changed handler handle packet function to remove the switch expression. Also replaced the stream  .toList() calls with .collect() calls because .toList doesn't exist in the version on the campus machines.